--- a/src/bunga.css
+++ b/src/bunga.css
@@ -154,7 +154,7 @@ body {
   transform: translate(-50%, -100%);
   width: 8vmin;
   height: 8vmin;
-  background-color: #6bf0ff;
+  background-color: #831843; /* kelopak bunga */
   filter: blur(10vmin);
 }
 .flower__leaf {
@@ -164,8 +164,8 @@ body {
   width: 8vmin;
   height: 11vmin;
   border-radius: 51% 49% 47% 53%/44% 45% 55% 69%;
-  background-color: #f672b0;
-  background-image: linear-gradient(to top, #ee5286, #ee5286);
+  background-color: #831843;
+  background-image: linear-gradient(to top, #ee5286, #831843);
   transform-origin: bottom center;
   opacity: 0.9;
   box-shadow: inset 0 0 2vmin rgba(255, 255, 255, 0.5);
@@ -185,7 +185,7 @@ body {
   transform-origin: bottom left;
   border-radius: 4vmin 10vmin 4vmin 4vmin;
   transform: translate(0%, 18%) rotateX(70deg) rotate(-43deg);
-  background-image: linear-gradient(to top, #ee5286, #ee5286);
+  background-image: linear-gradient(to top, #ee5286, #831843);
   z-index: 1;
   opacity: 0.8;
 }
@@ -212,7 +212,7 @@ body {
 .flower__line {
   height: 55vmin;
   width: 1.5vmin;
-  background-image: linear-gradient(to left, rgba(0, 0, 0, 0.2), transparent, rgba(255, 255, 255, 0.2)), linear-gradient(to top, transparent 10%, #583e08, #944415);
+  background-image: linear-gradient(to left, rgba(0, 0, 0, 0.2), transparent, rgba(255, 255, 255, 0.2)), linear-gradient(to top, transparent 10%, #831843, #831843);
   box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.5);
   -webkit-animation: grow-flower-tree 4s backwards;
           animation: grow-flower-tree 4s backwards;
@@ -227,7 +227,7 @@ body {
   height: var(--h);
   border-top-right-radius: var(--h);
   border-bottom-left-radius: var(--h);
-  background-image: linear-gradient(to top, rgba(20, 117, 122, 0.4), #095721);
+  background-image: linear-gradient(to top, rgba(20, 117, 122, 0.4), #831843);
 }
 .flower__line__leaf--1 {
   transform: rotate(70deg) rotateY(30deg);
@@ -271,7 +271,7 @@ body {
           animation: light-ans 4s linear infinite backwards;
 }
 .flower__light:nth-child(odd) {
-  background-color: #f76baf;
+  background-color: #831843;
 }
 .flower__light--1 {
   left: -2vmin;
@@ -314,7 +314,7 @@ body {
           animation-delay: 3.5s;
 }
 .flower__grass {
-  --c: #04661f;
+  --c: #831843;
   --line-w: 1.5vmin;
   position: absolute;
   bottom: 12vmin;
@@ -536,7 +536,7 @@ body {
 .flower__g-long {
   --w: 2vmin;
   --h: 6vmin;
-  --c: #0e5b3c;
+  --c: #831843;
   position: absolute;
   bottom: 10vmin;
   left: -3vmin;
@@ -592,9 +592,9 @@ body {
   width: 30vmin;
   height: 50vmin;
   border-top-left-radius: 100%;
-  border-left: 2vmin solid #217005;
+  border-left: 2vmin solid #831843;
   background-image: linear-gradient(to bottom, transparent, var(--dark-color) 60%);
-  -webkit-mask-image: linear-gradient(to top, transparent 30%, #24803e 60%);
+  -webkit-mask-image: linear-gradient(to top, transparent 30%, #831843 60%);
 }
 .flower__g-right--1 {
   -webkit-animation: flower-g-right-ans 2.5s linear infinite;
@@ -672,7 +672,7 @@ body {
 .flower__g-front__line {
   width: 0.3vmin;
   height: 20vmin;
-  background-image: linear-gradient(to top, transparent, #042e0b, transparent 100%);
+  background-image: linear-gradient(to top, transparent, #831843, transparent 100%);
   position: relative;
 }
 .flower__g-front__leaf-wrapper {
@@ -780,9 +780,9 @@ body {
   height: 10vmin;
   border-radius: 100% 0% 0% 100%/100% 100% 0% 0%;
   box-shadow: inset 0 2px 1vmin hsla(184deg, 97%, 58%, 0.2);
-  background-image: linear-gradient(to bottom left, transparent, var(--dark-color)), linear-gradient(to bottom right, #064f0a 50%, transparent 50%, transparent);
-  -webkit-mask-image: linear-gradient(to bottom right, #097149 50%, transparent 50%, transparent);
-  mask-image: linear-gradient(to bottom right, #0e8723 50%, transparent 50%, transparent);
+  background-image: linear-gradient(to bottom left, transparent, var(--dark-color)), linear-gradient(to bottom right, #831843 50%, transparent 50%, transparent);
+  -webkit-mask-image: linear-gradient(to bottom right, #831843 50%, transparent 50%, transparent);
+  mask-image: linear-gradient(to bottom right, #831843 50%, transparent 50%, transparent);
 }
 .flower__g-fr {
   position: absolute;
@@ -813,8 +813,8 @@ body {
   width: 30vmin;
   height: 50vmin;
   border-top-left-radius: 100%;
-  border-left: 2vmin solid #147b47;
-  -webkit-mask-image: linear-gradient(to top, transparent 25%, #0e4e2a 50%);
+  border-left: 2vmin solid #831843;
+  -webkit-mask-image: linear-gradient(to top, transparent 25%, #831843 50%);
   position: relative;
   z-index: 1;
 }
@@ -826,8 +826,8 @@ body {
   height: 10vmin;
   border-radius: 100% 0% 0% 100%/100% 100% 0% 0%;
   box-shadow: inset 0 2px 1vmin hsla(184deg, 97%, 58%, 0.2);
-  background-image: linear-gradient(to bottom left, transparent, var(--dark-color) 98%), linear-gradient(to bottom right, #106e18 45%, transparent 50%, transparent);
-  -webkit-mask-image: linear-gradient(135deg, #175f22 40%, transparent 50%, transparent);
+  background-image: linear-gradient(to bottom left, transparent, var(--dark-color) 98%), linear-gradient(to bottom right, #831843 45%, transparent 50%, transparent);
+  -webkit-mask-image: linear-gradient(135deg, #831843 40%, transparent 50%, transparent);
 }
 .flower__g-fr__leaf--1 {
   left: 20vmin;
@@ -956,7 +956,7 @@ body {
   transform: scale(0.8) rotate(-5deg);
 }
 .long-g--1 .leaf {
-  -webkit-mask-image: linear-gradient(to top, transparent 40%, #196d2a 80%) !important;
+  -webkit-mask-image: linear-gradient(to top, transparent 40%, #831843 80%) !important;
 }
 .long-g--1 .leaf--1 {
   --w: 5vmin;
@@ -971,7 +971,7 @@ body {
   transform: scale(0.6) rotateX(60deg);
 }
 .long-g--2 .leaf, .long-g--3 .leaf {
-  -webkit-mask-image: linear-gradient(to top, transparent 50%, #176220 80%) !important;
+  -webkit-mask-image: linear-gradient(to top, transparent 50%, #831843 80%) !important;
 }
 .long-g--2 .leaf--1, .long-g--3 .leaf--1 {
   left: -1vmin;
@@ -982,7 +982,7 @@ body {
   bottom: 0vmin;
 }
 .long-g--3 .leaf {
-  -webkit-mask-image: linear-gradient(to top, transparent 40%, #176220 80%) !important;
+  -webkit-mask-image: linear-gradient(to top, transparent 40%, #831843 80%) !important;
 }
 .long-g--4 {
   left: 25vmin;
@@ -991,7 +991,7 @@ body {
   transform: scale(0.6) rotateX(60deg);
 }
 .long-g--4 .leaf {
-  -webkit-mask-image: linear-gradient(to top, transparent 50%, #176220 80%) !important;
+  -webkit-mask-image: linear-gradient(to top, transparent 50%, #831843 80%) !important;
 }
 .long-g--5 {
   left: 42vmin;
@@ -1016,7 +1016,7 @@ body {
 .long-g .leaf {
   --w: 15vmin;
   --h: 40vmin;
-  --c: #1aaa15;
+  --c: #831843;
   position: absolute;
   bottom: 0;
   width: var(--w);
